--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "mapbox-gl": "^2.13.0",
+    "@types/leaflet": "^1.9.3",
+    "leaflet": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
